updated code for container quries

--- a/src/Features/ContainerQuery/index.css
+++ b/src/Features/ContainerQuery/index.css
@@ -1,70 +1,16 @@
-li.cq {
-    contain: layout inline-size;
+.cq-container {
+    width: 50%;
+    contain: style layout inline-size;
 }
-
-@container (min-width: 45ch) {
-    li.cq span {
-        --color: var(--color2);
-
-        &::after {
-            content: "medium" !important;
-            font-size: 2rem !important;
-        }
-    }
-}
-
-@container (min-width: 70ch) {
-    li.cq span {
-        --color: var(--color3);
-
-        &::after {
-            content: "large" !important;
-            font-size: 3rem !important;
-        }
-    }
-}
-
-* {
-    box-sizing: border-box;
-}
-
-:root {
-    --saturation: 95%;
-    --lightness: 80%;
-    --color1: 80;
-    --color2: 200;
-    --color3: 260;
-    --color: var(--color1);
-    --dark: calc(var(--lightness) - 60%);
-}
-
-ul.cq {
+.cq {
     display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    list-style: none;
-    margin: 0 auto;
-    padding: 1rem;
-    width: min(120ch, 100vw - 2rem);
+    flex-direction: column;
+    background-color: yellow;
 }
 
-li.cq {
-    flex: 1 1 30ch;
-}
-
-li.cq span {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 30vh;
-    border-radius: 1rem;
-    border: 2px dashed hsl(var(--color), var(--saturation), var(--dark));
-    background-color: hsl(var(--color), var(--saturation), var(--lightness));
-    color: hsl(var(--color), var(--saturation), var(--dark));
-}
-
-li.cq span::after {
-    content: "small";
-    font-size: 1.5rem;
-    letter-spacing: 0.03em;
+@container (min-width: 80ch) {
+    .cq {
+        flex-direction: row;
+        background-color: green;
+    }
 }
