--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,72 @@
 /* Uncomment when not using bundler */
 /* @import url("./Features/BlockBreaker/index.css");
 @import url("./Features/DragAndDrop/index.css"); */
+* {
+    font-family: monospace;
+    font-size: clamp(1rem, 1.25vw, 1.25rem);
+}
 
 html,
 body {
     margin: 0;
     height: 100%;
+    box-sizing: border-box;
 }
+
 .root-container {
     height: 100%;
+}
+
+h1 {
+    position: relative;
+    display: inline-block;
+    font-size: clamp(1rem, 2vw + 1rem, 4rem);
+}
+
+h1::before,
+h1::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+
+h1::before {
+    background-color: white;
+    animation: typewritter 4s steps(9) 1s forwards;
+}
+
+h1::after {
+    width: 0.125em;
+    background: black;
+    animation: 
+        typewritter 4s steps(9) 1s forwards,
+        blink 750ms steps(9) infinite;
+}
+
+@keyframes typewritter {
+    to {
+        left: 100%;
+    }
+}
+
+@keyframes blink {
+    to {
+        background: transparent;
+    }
+}
+
+@keyframes fadeIn {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+h1 ~ * {
+    opacity: 0;
+    transform: translateY(3rem);
+    animation: fadeIn 2s ease 6.5s forwards;
 }
