--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,8 @@ h1 {
     font-size: clamp(1rem, 2vw + 1rem, 4rem);
 }
 
-h1::before,
-h1::after {
+.learn-css h1::before,
+.learn-css h1::after {
     content: "";
     position: absolute;
     top: 0;
@@ -33,16 +33,15 @@ h1::after {
     left: 0;
 }
 
-h1::before {
+.learn-css h1::before {
     background-color: white;
     animation: typewritter 4s steps(9) 1s forwards;
 }
 
-h1::after {
+.learn-css h1::after {
     width: 0.125em;
     background: black;
-    animation: 
-        typewritter 4s steps(9) 1s forwards,
+    animation: typewritter 4s steps(9) 1s forwards,
         blink 750ms steps(9) infinite;
 }
 
@@ -65,7 +64,7 @@ h1::after {
     }
 }
 
-h1 ~ * {
+.learn-css h1 ~ * {
     opacity: 0;
     transform: translateY(3rem);
     animation: fadeIn 2s ease 6.5s forwards;
