--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,59 @@ body {
     box-sizing: border-box;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+main {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+@media (min-width: 768px) {
+    main {
+        width: 750px;
+    }
+}
+@media (min-width: 992px) {
+    main {
+        width: 970px;
+    }
+}
+@media (min-width: 1200px) {
+    main {
+        width: 1170px;
+    }
+}
+
+main {
+    flex: 100%;
+}
+
 .root-container {
     height: 100%;
+}
+
+footer {
+    margin: 1rem 0;
+}
+
+header nav ul {
+    display: flex;
+    list-style: none;
+}
+
+header nav ul li {
+    text-decoration: none;
+    margin-left: 1em;
+}
+
+header nav ul li a {
+    text-decoration: none;
 }
 
 h1 {
@@ -68,4 +119,16 @@ h1 {
     opacity: 0;
     transform: translateY(3rem);
     animation: fadeIn 2s ease 6.5s forwards;
+}
+
+@media (prefers-reduced-motion) {
+    .learn-css h1::before,
+    .learn-css h1::after,
+    .learn-css h1 ~ * {
+        animation-duration: 0s;
+        animation-delay: 0s;
+    }
+    .learn-css h1::after {
+        background: unset;
+    }
 }
