--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,35 @@ h1 {
     font-size: clamp(1rem, 2vw + 1rem, 4rem);
 }
 
+nav.breadcrumb {
+    padding: 0.4em 0.8em;
+    box-shadow: 0 0 2px 2px black;
+}
+
+nav.breadcrumb ol {
+    margin: 0;
+    padding-left: 0;
+    list-style: none;
+}
+
+nav.breadcrumb li {
+    display: inline-block;
+}
+
+nav.breadcrumb li + li::before {
+    display: inline-block;
+    margin: 0 0.25em;
+    transform: rotate(15deg);
+    border-right: 0.1em solid currentColor;
+    height: 0.8em;
+    content: "";
+}
+
+nav.breadcrumb [aria-current="page"] {
+    color: #000;
+    text-decoration: none;
+}
+
 .learn-css h1::before,
 .learn-css h1::after {
     content: "";
