--- a/src/index.css
+++ b/src/index.css
@@ -1,62 +1,244 @@
-/* Uncomment when not using bundler */
-/* @import url("./Features/BlockBreaker/index.css");
-@import url("./Features/DragAndDrop/index.css"); */
-* {
-    font-family: monospace;
-    font-size: clamp(1rem, 1.25vw, 1.25rem);
+/* START */
+html {
+    /* light */
+    --brand-light: var(--orange-6);
+    --text1-light: var(--gray-8);
+    --text2-light: var(--gray-7);
+    --surface1-light: var(--gray-0);
+    --surface2-light: var(--gray-1);
+    --surface3-light: var(--gray-2);
+    --surface4-light: var(--gray-3);
+    --surface-shadow-light: 200 10% 20%;
+    --shadow-strength-light: 2%;
+
+    /* dark */
+    --brand-dark: var(--orange-3);
+    --text1-dark: var(--gray-1);
+    --text2-dark: var(--gray-3);
+    --surface1-dark: var(--gray-9);
+    --surface2-dark: var(--gray-8);
+    --surface3-dark: var(--gray-7);
+    --surface4-dark: var(--gray-6);
+    --surface-shadow-dark: 200 50% 3%;
+    --shadow-strength-dark: 80%;
+
+    /* dim */
+    --brand-dim: var(--orange-4);
+    --text1-dim: var(--gray-3);
+    --text2-dim: var(--gray-4);
+    --surface1-dim: var(--gray-8);
+    --surface2-dim: var(--gray-7);
+    --surface3-dim: var(--gray-6);
+    --surface4-dim: var(--gray-5);
+    --surface-shadow-dim: 200 10% 13%;
+    --shadow-strength-dim: 20%;
+
+    /* grape */
+    --brand-grape: var(--grape-5);
+    --text1-grape: var(--grape-9);
+    --text2-grape: var(--grape-7);
+    --surface1-grape: var(--grape-0);
+    --surface2-grape: var(--grape-1);
+    --surface3-grape: var(--grape-2);
+    --surface4-grape: var(--grape-3);
+    --surface-shadow-grape: 288 30% 20%;
+    --shadow-strength-grape: 2%;
 }
 
-html,
+:root {
+    color-scheme: light;
+
+    /* set defaults */
+    --brand: var(--brand-grape);
+    --text1: var(--text1-grape);
+    --text2: var(--text2-grape);
+    --surface1: var(--surface1-grape);
+    --surface2: var(--surface2-grape);
+    --surface3: var(--surface3-grape);
+    --surface4: var(--surface4-grape);
+    --surface-shadow: var(--surface-shadow-grape);
+    --shadow-strength: var(--shadow-strength-grape);
+}
+
+@media (color-index: 48) {
+    :root {
+        color-scheme: dark;
+
+        --brand: var(--brand-dark);
+        --text1: var(--text1-dark);
+        --text2: var(--text2-dark);
+        --surface1: var(--surface1-dark);
+        --surface2: var(--surface2-dark);
+        --surface3: var(--surface3-dark);
+        --surface4: var(--surface4-dark);
+        --surface-shadow: var(--surface-shadow-dark);
+        --shadow-strength: var(--shadow-strength-dark);
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        color-scheme: dark;
+
+        --brand: var(--brand-dark);
+        --text1: var(--text1-dark);
+        --text2: var(--text2-dark);
+        --surface1: var(--surface1-dark);
+        --surface2: var(--surface2-dark);
+        --surface3: var(--surface3-dark);
+        --surface4: var(--surface4-dark);
+        --surface-shadow: var(--surface-shadow-dark);
+        --shadow-strength: var(--shadow-strength-dark);
+    }
+}
+
+[color-scheme="light"] {
+    color-scheme: light;
+
+    --brand: var(--brand-light);
+    --text1: var(--text1-light);
+    --text2: var(--text2-light);
+    --surface1: var(--surface1-light);
+    --surface2: var(--surface2-light);
+    --surface3: var(--surface3-light);
+    --surface4: var(--surface4-light);
+    --surface-shadow: var(--surface-shadow-light);
+    --shadow-strength: var(--shadow-strength-light);
+}
+
+[color-scheme="dark"] {
+    color-scheme: dark;
+
+    --brand: var(--brand-dark);
+    --text1: var(--text1-dark);
+    --text2: var(--text2-dark);
+    --surface1: var(--surface1-dark);
+    --surface2: var(--surface2-dark);
+    --surface3: var(--surface3-dark);
+    --surface4: var(--surface4-dark);
+    --surface-shadow: var(--surface-shadow-dark);
+    --shadow-strength: var(--shadow-strength-dark);
+}
+
+[color-scheme="dim"] {
+    color-scheme: dark;
+
+    --brand: var(--brand-dim);
+    --text1: var(--text1-dim);
+    --text2: var(--text2-dim);
+    --surface1: var(--surface1-dim);
+    --surface2: var(--surface2-dim);
+    --surface3: var(--surface3-dim);
+    --surface4: var(--surface4-dim);
+    --surface-shadow: var(--surface-shadow-dim);
+    --shadow-strength: var(--shadow-strength-dim);
+}
+
+[color-scheme="grape"] {
+    color-scheme: light;
+
+    --brand: var(--brand-grape);
+    --text1: var(--text1-grape);
+    --text2: var(--text2-grape);
+    --surface1: var(--surface1-grape);
+    --surface2: var(--surface2-grape);
+    --surface3: var(--surface3-grape);
+    --surface4: var(--surface4-grape);
+    --surface-shadow: var(--surface-shadow-grape);
+    --shadow-strength: var(--shadow-strength-grape);
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    font-family: var(--font-mono);
+    font-size: var(--font-size-fluid-1);
+}
+
+html {
+    height: 100%;
+    background-color: var(--gray-0);
+    background-color: var(--surface1);
+    color: var(--gray-8);
+    color: var(--text1);
+    accent-color: var(--orange-6);
+    accent-color: var(--brand);
+}
+
+.surface1 {
+    background-color: var(--gray-0);
+    background-color: var(--surface1);
+    color: var(--gray-7);
+    color: var(--text2);
+}
+
+.surface2 {
+    background-color: var(--gray-1);
+    background-color: var(--surface2);
+    color: var(--gray-7);
+    color: var(--text2);
+}
+
+.surface3 {
+    background-color: var(--gray-2);
+    background-color: var(--surface3);
+    color: var(--gray-8);
+    color: var(--text1);
+}
+
+.surface4 {
+    background-color: var(--gray-3);
+    background-color: var(--surface4);
+    color: var(--gray-8);
+    color: var(--text1);
+}
+
+/* ENDS */
+
 body {
     margin: 0;
-    height: 100%;
-    box-sizing: border-box;
+    min-height: 100%;
 }
 
-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+header,
+footer {
+    padding-block: var(--size-1);
 }
 
-main {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-@media (min-width: 768px) {
-    main {
-        width: 750px;
-    }
-}
-@media (min-width: 992px) {
-    main {
-        width: 970px;
-    }
-}
-@media (min-width: 1200px) {
-    main {
-        width: 1170px;
-    }
+header {
+    margin-block-end: var(--size-6);
+    box-shadow: var(--shadow-3);
+    position: sticky;
+    inset: 0;
+    z-index: var(--layer-important);
 }
 
 main {
-    flex: 100%;
+    padding-block: var(--size-1);
 }
 
 .root-container {
-    height: 100%;
+    width: min(100% - 2rem, 50rem);
+    margin-inline: auto;
 }
 
 footer {
-    margin: 1rem 0;
+    inset: auto 0 0;
+    margin-block-start: var(--size-6);
 }
 
 header nav ul {
     display: flex;
+    flex-direction: column;
+    padding: 0;
     list-style: none;
+}
+
+@media (min-width: 768px) {
+    header nav ul {
+        flex-direction: row;
+    }
 }
 
 header nav ul li {
@@ -71,7 +253,7 @@ header nav ul li a {
 h1 {
     position: relative;
     display: inline-block;
-    font-size: clamp(1rem, 2vw + 1rem, 4rem);
+    font-size: var(--font-size-fluid-3);
 }
 
 nav.breadcrumb {
